src/snapshots/afrotd__parser__tests__interpretation_html_7.1.2_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.2.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A ist in einer No Huddle Offense und alle Spieler bewegen sich
            zur Scrimmage Line, als der Ball freigegeben wird. Obwohl einige
            Spieler sich in ihren Positionen aufstellen und stoppen, bewegt
            sich wenigstens ein Spieler ohne zu stoppen weiter und bewegt sich
            weiterhin, als der Ball gesnappt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul – illegaler Shift, der in einem Fehlstart
                resultiert, da Team A die eine Sekunde Stillstand vor dem Snap
                nicht eingehalten hat. Strafe – 5 Meter vom Succeeding Spot.
                Die Schiedsrichter müssen abpfeifen und das Spiel stoppen.
            </p>
        </details>
    </div>
</article>
