src/snapshots/afrotd__parser__tests__interpretation_html_7.1.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-25. Defender B70 hat sich mit seiner rechten
            Hand und seinem Helm in der neutralen Zone aufgestellt. Als die
            Play Clock runterläuft, richtet sich der eingeschränkte Lineman A77
            auf und berührt B70.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul. Fehlstart durch A77, das in einem 1. und 15 an
                der A-20 resultiert. In diesem Spielzug hat sich die Defense in
                der neutralen Zone aufgestellt, ohne dass es eine sofortige
                Reaktion der Offense gibt. Und wenn dann schließlich die
                Offense sich bewegt, um den Defender zu berühren, ist das ein
                Fehlstart der Offense (Regel 7.1.2.b.3)
            </p>
        </details>
    </div>
</article>
