src/snapshots/afrotd__parser__tests__interpretation_html_7.1.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            A21 hat sich legal am Ende der Scrimmage Line in der Nähe von A88
            aufgestellt, der in einem Drei-Punkt-Stand steht. Team A steht in
            dieser Formation für eine Sekunde still. Danach verlässt A21 die
            Scrimmage Line und bewegt sich ins Backfield. A88 bewegt sich zu
            einer entfernteren Position an der Scrimmage Line.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                A88 kann seinen Drei-Punkt-Stand aufgeben, da er sich jetzt am
                Ende der Scrimmage Line befindet. Aber Team A muss vor dem Snap
                erneut für eine Sekunde still stehen, damit der Spielzug legal
                wird (Regel 7.1.4).
            </p>
        </details>
    </div>
</article>
