src/snapshots/afrotd__parser__tests__interpretation_html_7.1.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            B71 überquert die neutrale Zone in Team A’s Backfield und greift
            keinen Team A-Spieler an. A23, legal im Backfield, bewegt sich
            absichtlich, um B71 zu berühren.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A-Foul, Fehlstart. Strafe – 5 Meter vom Succeeding Spot.
            </p>
        </details>
    </div>
</article>
