src/snapshots/afrotd__parser__tests__interpretation_html_7.1.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A30, der sich als ein Back aufgestellt hat, startet seine legale
            Bewegung. Er dreht sich dann so, dass er in Richtung seiner
            Scrimmage Line schaut und sich seitlich bewegt. Beim Snap hat sich
            A30 leicht vorgebeugt und bewegt sich entweder weiter seitlich oder
            verharrt an einer Stelle.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legal.
            </p>
        </details>
    </div>
</article>
