src/snapshots/afrotd__parser__tests__interpretation_html_7.1.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            A30, der sich als Back aufgestellt hat, startet seine legale
            Bewegung. Er dreht sich dann so, dass er in Richtung seiner
            Scrimmage Line schaut und sich seitlich bewegt. Beim Snap befindet
            sich A30 weiterhin hinter der neutralen Zone, bewegt sich leicht
            vorgebeugt nach vorne oder seine seitliche Bewegung geht leicht in
            Richtung seiner Scrimmage Line.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Live Ball Foul beim Snap für illegale Bewegung, Strafe – 5
                Meter vom Previous Spot.
            </p>
        </details>
    </div>
</article>
