src/snapshots/afrotd__parser__tests__interpretation_html_7.1.4_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.4.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim 4. und 8 schickt Team A zwei Ersatzspieler mit den Nummern 21
            und 33 in das Spiel, als Ausnahme zur vorgeschriebenen
            Nummerierung. Diese Spieler stellen sich legal zwischen den Ends an
            der Scrimmage Line auf. Nachdem der Ball gesnappt wurde, wirft ein
            Team A-Spieler, der sich 15 Meter tief in einer Scrimmage
            Kick-Formation aufgestellt hat, einen legalen Vorwärtspass zu einem
            berechtigten Receiver und erzielt dadurch 10 Meter Raumgewinn.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Spiel. (Beachte: Das gleiche Spiel aus einer Fieldgoal
                Formation ist legal).
            </p>
        </details>
    </div>
</article>
