src/snapshots/afrotd__parser__tests__interpretation_html_7.1.4_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.4.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A stellt sich auf, wobei A11 sich in einer Linie 10 Meter
            hinter dem Snapper befindet. Die anderen drei Backs haben sich
            rechts und links außerhalb der Tackle Box verteilt. Nur vier der
            Offense Linemen tragen Trikots mit den Nummern von 50 bis 79. A11
            erhält den Rückpass vom Snapper, während sich Team A in dieser
            Formation befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Live Ball Foul, illegale Formation. Es befinden sich nicht
                genug Spieler an der Scrimmage Line mit Nummern von 50 bis 79.
                Team A befindet sich nicht in einer Scrimmage Kick Formation,
                da es in dieser Konstellation nicht offensichtlich ist, dass
                ein Kick versucht werden wird (Regel 2.16.10).
            </p>
        </details>
    </div>
</article>
